chore: Update background color in config.toml

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 base="light"
 primaryColor="#0070c0" # light blue
-backgroundColor="white"
+backgroundColor="#e6e6f7"
 secondaryBackgroundColor="#F3F3F3" #offwhite
 textColor="black"
 font="sans serif"
